--- a/components/Iconfont/ciconfont.scss
+++ b/components/Iconfont/ciconfont.scss
@@ -1,48 +1,45 @@
 @font-face {
-  font-family: "ciconfont"; /* Project id 3989185 */
-  /* Color fonts */
-  src: 
-       url('//at.alicdn.com/t/c/font_3989185_z5hbp98nees.woff2?t=1680248728977') format('woff2'),
-       url('//at.alicdn.com/t/c/font_3989185_z5hbp98nees.woff?t=1680248728977') format('woff'),
-       url('//at.alicdn.com/t/c/font_3989185_z5hbp98nees.ttf?t=1680248728977') format('truetype');
+	font-family: 'ciconfont'; /* Project id 3989185 */
+	/* Color fonts */
+	src: url('./ciconfont.ttf') format('truetype');
 }
 
 .ciconfont {
-  font-family: "ciconfont" !important;
-  font-size: 16px;
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-family: 'ciconfont' !important;
+	font-size: 16px;
+	font-style: normal;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .c_shouye1:before {
-  content: "\e671";
+	content: '\e671';
 }
 
 .c_xiaoxi1:before {
-  content: "\e673";
+	content: '\e673';
 }
 
 .c_wode1:before {
-  content: "\e675";
+	content: '\e675';
 }
 
 .c_yingyongchanpin1:before {
-  content: "\e677";
+	content: '\e677';
 }
 
 .c_zhengce1:before {
-  content: "\e679";
+	content: '\e679';
 }
 
 .c_xiangmu1:before {
-  content: "\e67b";
+	content: '\e67b';
 }
 
 .c_xiangmu11:before {
-  content: "\e67d";
+	content: '\e67d';
 }
 
 .c_dingyue1:before {
-  content: "\e67f";
+	content: '\e67f';
 }
