--- a/uni.scss
+++ b/uni.scss
@@ -11,7 +11,7 @@
  *
  * 如果你的项目同样使用了scss预处理，你也可以直接在你的 scss 代码中使用如下变量，同时无需 import 这个文件
  */
-
+ @import '@/uni_modules/uview-ui/theme.scss';
 /* 颜色变量 */
 
 /* 行为相关颜色 */
@@ -75,3 +75,8 @@ $uni-font-size-subtitle: 36rpx;
 $uni-color-paragraph: #3f536e; // 文章段落颜色
 $uni-font-size-paragraph: 30rpx;
 
+.b-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
