--- a/uni.scss
+++ b/uni.scss
@@ -42,6 +42,7 @@ $uni-border-color: #c8c7cc;
 $uni-font-size-sm: 24rpx;
 $uni-font-size-base: 28rpx;
 $uni-font-size-lg: 32rpx;
+$uni-font-size-big: 40rpx;
 
 /* 图片尺寸 */
 $uni-img-size-sm: 40rpx;
