--- a/uni.scss
+++ b/uni.scss
@@ -105,3 +105,8 @@ view {
 	font-size: $uni-font-size-base;
 	color: $uni-text-color-label;
 }
+.b-link {
+	font-size: $uni-font-size-base;
+	color: $lcg-bg-color-main;
+	cursor: pointer;
+}
