--- a/uni.scss
+++ b/uni.scss
@@ -38,6 +38,9 @@ $uni-bg-color-hover: #f1f1f1; //点击状态颜色
 $uni-bg-color-mask: rgba(0, 0, 0, 0.4); //遮罩颜色
 
 $lcg-bg-color-main: #69c98b; // 主背景色
+/* 按钮颜色 */
+$lcg-main-button-bg: #3fa162;
+$lcg-cancel-button-bg: #6FB086;
 
 /* 边框颜色 */
 $uni-border-color: #c8c7cc;
