--- a/components/lcg-iconfont/ciconfont/iconfont.css
+++ b/components/lcg-iconfont/ciconfont/iconfont.css
@@ -2,9 +2,9 @@
   font-family: "ciconfont"; /* Project id 3989185 */
   /* Color fonts */
   src: 
-       url('iconfont.woff2?t=1686098087702') format('woff2'),
-       url('iconfont.woff?t=1686098087702') format('woff'),
-       url('iconfont.ttf?t=1686098087702') format('truetype');
+       url('iconfont.woff2?t=1686183335528') format('woff2'),
+       url('iconfont.woff?t=1686183335528') format('woff'),
+       url('iconfont.ttf?t=1686183335528') format('truetype');
 }
 
 .ciconfont {
@@ -15,35 +15,319 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.c-icon-shouye1:before {
-  content: "\e671";
+.c-icon--browsing:before {
+  content: "\e605";
 }
 
-.c-icon-xiaoxi1:before {
-  content: "\e673";
+.c-icon--calendar:before {
+  content: "\e606";
+}
+
+.c-icon--calendar-:before {
+  content: "\e607";
+}
+
+.c-icon--calendar-_1:before {
+  content: "\e608";
+}
+
+.c-icon--classroom:before {
+  content: "\e609";
+}
+
+.c-icon--chatting-:before {
+  content: "\e60a";
+}
+
+.c-icon--computer:before {
+  content: "\e60b";
+}
+
+.c-icon--conversation:before {
+  content: "\e60c";
+}
+
+.c-icon--ereader:before {
+  content: "\e60d";
+}
+
+.c-icon--diploma:before {
+  content: "\e60e";
+}
+
+.c-icon--collaboration:before {
+  content: "\e60f";
+}
+
+.c-icon--education-:before {
+  content: "\e610";
+}
+
+.c-icon--exam:before {
+  content: "\e611";
+}
+
+.c-icon--folder:before {
+  content: "\e612";
+}
+
+.c-icon--folders-:before {
+  content: "\e613";
+}
+
+.c-icon--idea:before {
+  content: "\e614";
+}
+
+.c-icon--flask:before {
+  content: "\e615";
+}
+
+.c-icon--folder-:before {
+  content: "\e616";
+}
+
+.c-icon--lecture-:before {
+  content: "\e617";
+}
+
+.c-icon--mathematics:before {
+  content: "\e618";
+}
+
+.c-icon--lottery:before {
+  content: "\e619";
+}
+
+.c-icon--lab-:before {
+  content: "\e61a";
+}
+
+.c-icon--mission-:before {
+  content: "\e61b";
+}
+
+.c-icon--notebook:before {
+  content: "\e61c";
+}
+
+.c-icon--message:before {
+  content: "\e61d";
+}
+
+.c-icon--network-:before {
+  content: "\e61e";
+}
+
+.c-icon--notes:before {
+  content: "\e61f";
+}
+
+.c-icon--notepad:before {
+  content: "\e620";
+}
+
+.c-icon--online:before {
+  content: "\e621";
+}
+
+.c-icon--online-education-_2:before {
+  content: "\e622";
+}
+
+.c-icon--online-education-_1:before {
+  content: "\e623";
+}
+
+.c-icon--online-education-:before {
+  content: "\e624";
+}
+
+.c-icon--online-education-_5:before {
+  content: "\e625";
+}
+
+.c-icon--online-education-_3:before {
+  content: "\e626";
+}
+
+.c-icon--open-book:before {
+  content: "\e627";
+}
+
+.c-icon--online-payment:before {
+  content: "\e628";
+}
+
+.c-icon--online-education-_6:before {
+  content: "\e629";
+}
+
+.c-icon--online-education-_4:before {
+  content: "\e62a";
+}
+
+.c-icon--professor-:before {
+  content: "\e62b";
+}
+
+.c-icon--open-book-:before {
+  content: "\e62c";
+}
+
+.c-icon--pencils:before {
+  content: "\e62d";
+}
+
+.c-icon--reading:before {
+  content: "\e62e";
+}
+
+.c-icon--puzzle:before {
+  content: "\e62f";
+}
+
+.c-icon--streaming:before {
+  content: "\e630";
+}
+
+.c-icon--smartphone:before {
+  content: "\e631";
+}
+
+.c-icon--tic-tac-toe:before {
+  content: "\e632";
+}
+
+.c-icon--student-:before {
+  content: "\e633";
+}
+
+.c-icon--reading-:before {
+  content: "\e634";
+}
+
+.c-icon--supplies:before {
+  content: "\e635";
+}
+
+.c-icon--school:before {
+  content: "\e636";
+}
+
+.c-icon--synchronization:before {
+  content: "\e637";
+}
+
+.c-icon--speed:before {
+  content: "\e638";
+}
+
+.c-icon--settings:before {
+  content: "\e639";
+}
+
+.c-icon--teaching:before {
+  content: "\e63a";
+}
+
+.c-icon--stats-:before {
+  content: "\e63b";
+}
+
+.c-icon--school-:before {
+  content: "\e63c";
+}
+
+.c-icon--search:before {
+  content: "\e63d";
+}
+
+.c-icon--to-do:before {
+  content: "\e63e";
+}
+
+.c-icon--school_1:before {
+  content: "\e63f";
+}
+
+.c-icon--teacher:before {
+  content: "\e640";
+}
+
+.c-icon--tutorial-:before {
+  content: "\e641";
+}
+
+.c-icon--teacher-:before {
+  content: "\e642";
+}
+
+.c-icon--research:before {
+  content: "\e643";
+}
+
+.c-icon--school-bag:before {
+  content: "\e644";
+}
+
+.c-icon--tutorial:before {
+  content: "\e645";
+}
+
+.c-icon--trophy:before {
+  content: "\e646";
+}
+
+.c-icon--video-:before {
+  content: "\e647";
+}
+
+.c-icon--thinking:before {
+  content: "\e648";
+}
+
+.c-icon--abc:before {
+  content: "\e649";
+}
+
+.c-icon--abc-:before {
+  content: "\e64a";
+}
+
+.c-icon--article:before {
+  content: "\e64b";
+}
+
+.c-icon--book-:before {
+  content: "\e64c";
+}
+
+.c-icon--book:before {
+  content: "\e64d";
+}
+
+.c-icon--book-_1:before {
+  content: "\e601";
+}
+
+.c-icon--briefcase:before {
+  content: "\e602";
+}
+
+.c-icon--bulb:before {
+  content: "\e603";
+}
+
+.c-icon-shouye1:before {
+  content: "\e671";
 }
 
 .c-icon-wode1:before {
   content: "\e675";
 }
 
-.c-icon-yingyongchanpin1:before {
-  content: "\e677";
-}
-
-.c-icon-zhengce1:before {
-  content: "\e679";
-}
-
 .c-icon-xiangmu1:before {
   content: "\e67b";
-}
-
-.c-icon-xiangmu11:before {
-  content: "\e67d";
-}
-
-.c-icon-dingyue1:before {
-  content: "\e67f";
 }
 
